syntax = "proto3";

import "bank-service-models.proto";

option java_multiple_files = true;
option java_package = "com.codecafe.grpc.intro.service";

service BankService {

  // Unary RPC
  rpc getBalance(BalanceCheckRequest) returns (Balance);

  // Server-streaming RPC
  // assumption - bank has denomination of $10 only
  // use case - if client withdraws $40 then their should be 4 streaming responses
  // of $10 each per second
  rpc withdraw(WithdrawRequest) returns(stream WithdrawResponse);

  // Client-streaming RPC
  // assumption - client has a lot of money
  // use case - client deposits lots of money in batches and only once all deposits are done
  // then only server should respond back to the client with the updated balance
  rpc deposit(stream DepositRequest) returns(DepositResponse);

}